--- a/index.html
+++ b/index.html
@@ -17,7 +17,28 @@
                     <li><a href="/index.html">Contato</a></li>
                 </ul>
             </div>
-            <div class="toprigth"></div>
+            <div class="toprigth">
+                <a href="">
+                    <input type="image" src="assets/images/search.png" border="0" width="26"height="26" />
+                    <input type="text" name="busca" placeholder="Busca..." class="topobusca">
+                    <img src="assets/images/rss.png" border="0" width="26" height="26" >
+                    <img src="assets/images/youtube.png" border="0" width="26" height="26" >
+                    <img src="assets/images/insta.png" border="0" width="26" height="26" >
+                    <img src="assets/images/googleplus.png" border="0" width="26" height="26" >
+                    <img src="assets/images/facebook.png" border="0" width="26" height="26" >
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="topo2">
+        <div class="topo2int">
+            <div class="logo">
+                <h1>Portal Notícias</h1>
+            </div>
+            <div class="banner">
+                <h1>Banner de publicidade</h1>
+            </div>
         </div>
     </div>
 </body>
