--- a/index.html
+++ b/index.html
@@ -41,5 +41,85 @@
             </div>
         </div>
     </div>
+
+    <div class="menu">
+        <div class="menuint">
+            <ul>
+                <li><a href="./" class="ativo">Home</a></li>
+                <li><a href="./">Economia</a></li>
+                <li>
+                    <a href="./">Entretenimento</a>
+                    <img src="assets/images/white-down-arrow-png-2.png" border="0" width="10">
+                    <div class="submenu">
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 1
+                            </div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 2
+                            </div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 3
+                            </div>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <a href="./">Esporte</a>
+                    <img src="assets/images/white-down-arrow-png-2.png" border="0" width="10">
+                    <div class="submenu">
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 1
+                            </div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 2
+                            </div>
+                        </a>
+                    </div>
+                </li>
+                <li><a href="./">Geral</a></li>
+                <li>
+                    <a href="./">Notícias</a>
+                    <img src="assets/images/white-down-arrow-png-2.png" border="0" width="10">
+                    <div class="submenu">
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 1
+                            </div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 2
+                            </div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 3
+                            </div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 4
+                            </div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">
+                                Submenu 5
+                            </div>
+                        </a>
+                    </div>
+                </li>
+                <li><a href="./">Polícia</a></li>
+                <li><a href="./">Vídeos</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
