criando conteudo lateral

--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
                 </ul>
             </div>
             <div class="toprigth">
+                <a href=""><input type="image" src="assets/images/search.png" border="0" width="26"height="26" /></a>
+                <input type="text" name="busca" placeholder="Busca..." class="topobusca">
                 <a href="">
-                    <input type="image" src="assets/images/search.png" border="0" width="26"height="26" />
-                    <input type="text" name="busca" placeholder="Busca..." class="topobusca">
                     <img src="assets/images/rss.png" border="0" width="26" height="26" >
+                </a>
+                <a href="">
                     <img src="assets/images/youtube.png" border="0" width="26" height="26" >
+                </a>
+                <a href="">
                     <img src="assets/images/insta.png" border="0" width="26" height="26" >
+                </a>
+                <a href="">
                     <img src="assets/images/googleplus.png" border="0" width="26" height="26" >
+                </a>
+                <a href="">
                     <img src="assets/images/facebook.png" border="0" width="26" height="26" >
                 </a>
             </div>
@@ -119,6 +127,99 @@
                 <li><a href="./">Polícia</a></li>
                 <li><a href="./">Vídeos</a></li>
             </ul>
+        </div>
+    </div>
+
+    <div class="ultimasnoticias">
+        <div class="ultimasnoticiasint">
+            <div class="ultinoticiasarea">
+                <div class="ultinoticiastitulo">
+                    ÚLTIMAS NOTÍCIAS
+                </div>
+                <div class="ultinoticiasnoticia">
+                    Aqui ficará alguma notícia recente
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="containerint">
+            <div class="leftside">
+
+            </div>
+            <div class="rightside">
+                <div class="widget">
+                    <div class="widgettitulo">
+                        SOCIAL
+                    </div>
+                    <div class="widgetconteudo">
+                        <a href="">
+                            <img src="assets/images/rss.png" border="0" width="26" height="26" >
+                        </a>
+                        <a href="">
+                            <img src="assets/images/youtube.png" border="0" width="26" height="26" >
+                        </a>
+                        <a href="">
+                            <img src="assets/images/insta.png" border="0" width="26" height="26" >
+                        </a>
+                        <a href="">
+                            <img src="assets/images/googleplus.png" border="0" width="26" height="26" >
+                        </a>
+                        <a href="">
+                            <img src="assets/images/facebook.png" border="0" width="26" height="26" >
+                        </a>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widgettitulo">
+                        ÚLTIMAS NOTÍCIAS
+                    </div>
+                    <div class="widgetconteudo">
+                        <div class="noticiaitem">
+                            <a href="">TÍTULO DA NOTÍCIA PARA QUE FIQUE COM PELO MENOS
+                            DUAS LINHAS E DÊ PRA VER COMO VAI FICAR</a> 
+                        </div>
+                        <div class="noticiaitem">
+                            <a href="">TÍTULO DA NOTÍCIA PARA QUE FIQUE COM PELO MENOS
+                            DUAS LINHAS E DÊ PRA VER COMO VAI FICAR</a> 
+                        </div>
+                        <div class="noticiaitem">
+                            <a href="">TÍTULO DA NOTÍCIA PARA QUE FIQUE COM PELO MENOS
+                            DUAS LINHAS E DÊ PRA VER COMO VAI FICAR</a> 
+                        </div>
+                        <div class="noticiaitem">
+                            <a href="">TÍTULO DA NOTÍCIA PARA QUE FIQUE COM PELO MENOS
+                            DUAS LINHAS E DÊ PRA VER COMO VAI FICAR</a> 
+                        </div>
+                        <div class="noticiaitem">
+                            <a href="">TÍTULO DA NOTÍCIA PARA QUE FIQUE COM PELO MENOS
+                            DUAS LINHAS E DÊ PRA VER COMO VAI FICAR</a> 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widgettitulo">
+                        PUBLICIDADE
+                    </div>
+                    <div class="widgetconteudo">
+                        <a href="">
+                            <img src="assets/images/Captura de tela de 2020-05-11 12-19-15.png" border="0" width="260">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widgettitulo">
+                        ENCONTRE-NOS NO FACEBOOK
+                    </div>
+                    <div class="widgetconteudo">
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs&width=260&height=120&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=315519695209266" width="340" height="120" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
