--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="assets/js/script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Meu Portal de Notícial</title>
@@ -146,7 +147,59 @@
     <div class="container">
         <div class="containerint">
             <div class="leftside">
+                <div class="slidshow" id="slideshow">
+                    <div class="slidebolinhas">
+                        <div class="bolinha" onclick="mudarSlide(0)"></div>
+                        <div class="bolinha" onclick="mudarSlide(1)"></div>
+                        <div class="bolinha" onclick="mudarSlide(2)"></div>
+                        <div class="bolinha" onclick="mudarSlide(3)"></div>
+                    </div>
+                    <div class="slidshowarea">
+                        <div class="slide" style="background-image: url('https://i.ytimg.com/vi/3hxMSZP9tjI/maxresdefault.jpg');">
+                            <div class="slidinfo">
+                                <div class="slideinfotitulo">
+                                    Tite convoca Bolsonaro para seleção
+                                </div>
+                                <div class="slideinfosubtitulo">
+                                    O presidente foi convocado, devido seu porte atlético
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="slide" style="background-image: url('https://img.r7.com/images/adelio-21092018154216793?dimensions=660x360');">
+                            <div class="slidinfo">
+                                <div class="slideinfotitulo">
+                                    Papangú é encontrado na Bahia
+                                </div>
+                                <div class="slideinfosubtitulo">
+                                    Papangú, filhote do Cabrunco é encontrado assustando moradores em Salvador
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="slide" style="background-image: url('https://s2.glbimg.com/-2d2AosbEKN0JD-jwjUT6IPpSzg=/0x0:1700x1065/1008x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2020/v/h/RO5CWXQjAPgKjYGFVWGQ/brasil-coronavirus.jpg');">
+                            <div class="slidinfo">
+                                <div class="slideinfotitulo">
+                                    Covid 19 vai matar um bocado de gente no Brasil
+                                </div>
+                                <div class="slideinfosubtitulo">
+                                    Niguém usa máscara nessa porra
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="slide" style="background-image: url('https://abrilexame.files.wordpress.com/2020/04/thumbnail.jpg');">
+                            <div class="slidinfo">
+                                <div class="slideinfotitulo">
+                                    Filhos de Bolsonaro viram sócios de Lula
+                                </div>
+                                <div class="slideinfosubtitulo">
+                                    A parceria aconteceu há algumas semanas, afirmam fontes
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="rightside">
                 <div class="widget">
